--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="author" href="https://plus.google.com/113101541449927918834">
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet" type="text/css">
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 
     <script>
@@ -819,12 +819,12 @@ $(document).ready(function(){
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
 <script src="jq/main.js"></script>
-<script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="lib/counterup/counterup.min.js"></script>
 
 <script src="lib/easing/easing.min.js"></script>
 <script src="mail/jqBootstrapValidation.min.js"></script>
 <script src="mail/contact.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
