--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ $(document).ready(function(){
     		              </div>
     		</div>
     		<hr style="color: whitesmoke;">
-    		<div id="menu-bar">
+    		<div id="menu-bar" style="display: none">
     	      <ul>
     		 <li><a href="#">HOME</a></li>
 				<li><a href="#">ABOUT</a></li>
