--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ $(document).ready(function(){
         </div>
 
          <div class="facts" >
-           <div class="container clearfix">
+           <div class="container clearfix" style="width:90%">
             	<div class="col-lg-3 col-lg-6 counterfloat">
                 <div class="  clearfix">
                         <div class="facts-item">
