--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(document).ready(function(){
 				<li><a href="#">SERVICES</a></li>
 				 <li><a href="#">PRICE</a></li>
 				 <li><a href="#">WASHINGPOINTS</a></li>
-				 <li class="dropdown"><a href="#" style="margin-right: -15px;">PAGES</a> <i class="fa fa-caret-down" style="color:white;"></i>
+				 <li class="dropdown"><a href="#" style="margin-right: -15px;">PAGES</a> <i class="fa fa-caret-down" style="color:black;"></i>
 				 <div class="dropdown-content ">
 				 		<a href="#">LINK</a>
 				 		<a href="#">LINK</a>
