--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@ $(document).ready(function(){
             		</div>
             	</div>
             		<div class="col-6-2">
-            		<div class="section-header text-left">
+            		<div class="section-header text-left" style=
+			     "margin:0">
                             <p>About Us</p>
                             <h2>car washing and detailing</h2>
                         </div>
