--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ $(document).ready(function(){
 
                 
                 <div class="services">
-                	<div class="container clearfix" style="margin: 0 65px 0 65px ">
+                	<div class="container clearfix"  >
                 		<div class="section-header text-center">
                     <p>What We Do?</p>
                     <h2>Premium Washing Services</h2>
