--- a/index.html
+++ b/index.html
@@ -229,13 +229,12 @@ $(document).ready(function(){
             		</div>
             	</div>
             		<div class="col-6-2">
-            		<div class="section-header text-left" style=
-			     "margin:0">
+            		<div class="section-header text-left">
                             <p>About Us</p>
                             <h2>car washing and detailing</h2>
                         </div>
                         <div class="about-content">
-                            <p>
+                            <p style="text-align:center">
                                 Lorem ipsum dolor sit amet elit. In vitae turpis. Donec in hendre dui, vel blandit massa. Ut vestibu suscipi cursus. Cras quis porta nulla, ut placerat risus. Aliquam nec magna eget velit luctus dictum
                             </p>
                             <ul>
