--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ $(document).ready(function(){
                   </p>
                    <h2>Choose Your Plan</h2>
                 <div class="price-tag ">
-                  <div class="container clearfix "; style="padding-top: 15px;margin-right: 42px; margin-left: 42px;">
+                  <div class="container clearfix "; style="margin-right: 42px; margin-left: 42px;">
                     
                   <div class="column-card">
                     <div class="header">
