--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ $(document).ready(function(){
                             </div>         
               
               <div class="location-form">
-                <div class="container clearfix" style="margin: 0 45px 0 45px">
+                <div class="container clearfix" >
                   <div class="col-7">
                     <div class="header">
                       <p>Washing Points</p>
