--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ $(document).ready(function(){
                    <h2>Choose Your Plan</h2>
 		       <hr>
                 <div class="price-tag ">
-                  <div class="container clearfix "; style="margin-right: 42px; margin-left: 42px;">
+                  <div class="container clearfix "; style="margin-right: 42px; margin-left: 42px; margin-top:22px">
                     
                   <div class="column-card">
                     <div class="header">
