--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title>car wash 2</title>
+        <title>Magic car Wash</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
