--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ $(document).ready(function(){
             </div>
             <!-- craousal-->
             
-            <div class="container" style="margin-bottom:25px">
+            <div class="container" style="margin-bottom:25px; padding:0px">
              <div class="caraousel">
                 <div class="img fade">
                 <img src="img/carousel-1.jpg" style="width:100%;height:100%" > 
