--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ $(document).ready(function(){
     		      </div>
 
     		       <div style="float: right; margin: 15px 15px 0px 0px ;">
-    			      <button style=" font-size: 25px; border:1px solid whitesmoke" onclick="myFunction()">
+    			      <button  onclick="myFunction()">
     			      &#9776;
     			        </button>
     		              </div>
     		</div>
-    		<hr style="color: whitesmoke;">
+    		
     		<div id="menu-bar" style="display: none">
     	      <ul>
     		 <li><a href="#">HOME</a></li>
