--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ $(document).ready(function(){
                             <h1 >Exterior &amp; Interior Washing</h1>
                             
                     </div>
+		     </div>
 
                     <div class="img fade">
                 <img src="img/carousel-3.jpg"  style="width:100%;height:100%"  > 
