--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ $(document).ready(function(){
 				 	
 			</ul>
 			<div class="button clearfix">
-				<button>Get Appointment</button>
+				<a><button>Get Appointment</button></a>
 			</div>
 		</div>
     <div class="navbar-resoponsive clearfix">
