--- a/index.html
+++ b/index.html
@@ -225,9 +225,8 @@ $(document).ready(function(){
                             <h2>car washing and detailing</h2>
                         </div>
                         <div class="about-content">
-                            <p >
-                                Lorem ipsum dolor sit amet elit. In vitae turpis. Donec in hendre dui, vel blandit massa. Ut vestibu suscipi cursus. Cras quis porta nulla, ut placerat risus. Aliquam nec magna eget velit luctus dictum
-                            </p>
+                            <p> car detailing refers to cleaning and protecting your car from top to bottom using various tools and different techniques which are usually not used in the traditional car cleaning or car washing methods.
+                               and in our company provides you various car Washing <b>DEATAILINGS</b>             </p>
                             <ul>
                                 <li><i class="far fa-check-circle"></i>Seats washing</li>
                                 <li><i class="far fa-check-circle"></i>Vacuum cleaning</li>
