--- a/index.html
+++ b/index.html
@@ -252,42 +252,44 @@ $(document).ready(function(){
                 	<div class="service-item">
                 	<i class="flaticon-car-wash-1"></i>
                 	<h3>Exterior Washing</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
+                	<p>The exterior car washing process begins with an intensive washing using ph-neutral car shampoo. The car shampoo is allowed to foam enough so that the accumulated mud gets soft enough to be rinsed off.
+			After the washing, the paintwork is then clayed using the clay bar. The clay bar removes any of the dirt that didn’t get off with normal detergents.
+						      The detailing of the car makes sure that the depreciation rate of your car gets slowed down a bit. With a regular detailing schedule and routine, you can make sure that your vehicle looks new and attractive when you want to sell it off.</p>
                 </div>
               </div>
 
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-car-wash"></i>
-                	<h3>Exterior Washing</h3>
+                	<h3>Interior Washing</h3>
                 	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-vacuum-cleaner"></i>
-                	<h3>Exterior Washing</h3>
+                	<h3>Vacuum Cleaning</h3>
                 	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-seat"></i>
-                	<h3>Exterior Washing</h3>
+                	<h3>Seats Washing</h3>
                 	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-car-service"></i>
-                	<h3>Exterior Washing</h3>
+                	<h3>Window Wiping</h3>
                 	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-car-service-2"></i>
-                	<h3>Exterior Washing</h3>
+                	<h3>Wet Cleaning</h3>
                 	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
                 </div>
               </div>
