--- a/index.html
+++ b/index.html
@@ -262,36 +262,44 @@ $(document).ready(function(){
                 	<div class="service-item">
                 	<i class="flaticon-car-wash"></i>
                 	<h3>Interior Washing</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
+                	<p>
+			    we gather all the trash from the floorboards, cup holders, door pockets, and seat pockets and recycle or dispose of it. Remove car seats, toys, and other items from the car.
+						    Floor mats are often some of the dirtiest items in a car interior.Our team remove all of them from the car for easier cleaning and Give each mat a good shake or vacuuming before you begin cleaning. Then place them on a tarp or other type of drop cloth rather than on the dirty ground.
+						    </p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-vacuum-cleaner"></i>
                 	<h3>Vacuum Cleaning</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
+                	<p>
+			 Our team do not just vacuum up the dirt and debris sitting on the surface, it makes sure to get all the sand, dust and debris buried in the roots of the carpet and upholstery fibers. Unless you remove all the dirt, any further cleaning will be compromised and the overall result will be inferior. As industry professionals, your customers expect a level of service they cannot do on their own.				  
+							  </p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-seat"></i>
                 	<h3>Seats Washing</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
+                	<p>We use various modern and effective ancient techniques to clean the seats of your car we don't use detergent but several new and strong chemicals to give your car a sexy look
+			
+						</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-car-service"></i>
                 	<h3>Window Wiping</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
+                	<p>Window wiping holds a speacial place in car washing because shinning windows can add points to yous car's attraction. so, We make sure them to be cleaned with love</p>
                 </div>
               </div>
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-car-service-2"></i>
                 	<h3>Wet Cleaning</h3>
-                	<p>Lorem ipsum dolor sit amet elit. Phase nec preti facils ornare velit non metus tortor</p>
-                </div>
+                	<p>It is always better if your car interior cleaning  has job by a professional as We are the one who know and cares about your vehicle the most. 
+							 In Our wet claning, we provide extensive clening deep down the the very narrow corners of your car.
+							 </p>
               </div>
             </div>
           </div>
