--- a/index.html
+++ b/index.html
@@ -286,14 +286,14 @@ $(document).ready(function(){
 						</p>
                 </div>
               </div>
-               <div class="col-3 col-6">
+               <div class="col-3 col-6 mtr">
                 	<div class="service-item">
                 	<i class="flaticon-car-service"></i>
                 	<h3>Window Wiping</h3>
                 	<p>Window wiping holds a speacial place in car washing because shinning windows can add points to yous car's attraction. so, We make sure them to be cleaned with love</p>
                 </div>
               </div>
-               <div class="col-3 col-6">
+               <div class="col-3 col-6 mt2">
                 	<div class="service-item">
                 	<i class="flaticon-car-service-2"></i>
                 	<h3>Wet Cleaning</h3>
