--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(document).ready(function(){
                 	<h3>Exterior Washing</h3>
                 	<p>The exterior car washing process begins with an intensive washing using ph-neutral car shampoo. The car shampoo is allowed to foam enough so that the accumulated mud gets soft enough to be rinsed off.
 			After the washing, the paintwork is then clayed using the clay bar. The clay bar removes any of the dirt that didn’t get off with normal detergents.
-						      The detailing of the car makes sure that the depreciation rate of your car gets slowed down a bit. With a regular detailing schedule and routine, you can make sure that your vehicle looks new and attractive when you want to sell it off.</p>
+						      The detailing of the car makes sure that the depreciation rate of your car gets slowed down a bit. </p>
                 </div>
               </div>
 
