--- a/index.html
+++ b/index.html
@@ -322,11 +322,13 @@ $(document).ready(function(){
             <div class="col-lg-3 col-lg-6 counterfloat">
                 <div class="   clearfix">
                         <div class="facts-item">
-                            <i class="fa fa-map-marker-alt"></i>
+                            <i class="fa fa-user"></i>
                           </div>
                             <div class="facts-text">
-                                <h3 class="counter">25</h3>
-                                <p>Service Points</p>
+                                <h3 class="counter">350</h3>
+                                <p>Engineers & Workers
+
+</p>
                             </div>
                   </div>
                </div>
@@ -336,11 +338,11 @@ $(document).ready(function(){
               <div class="col-lg-3 col-lg-6 counterfloat">
                 <div class=" clearfix">
                         <div class="  facts-item">
-                            <i class="fa fa-map-marker-alt"></i>
+                            <i class="fa fa-users"></i>
                           </div>
                             <div class="facts-text">
-                                <h3 class="counter">25</h3>
-                                <p>Service Points</p>
+                                <h3 class="counter">1500</h3>
+                                <p>Happy Clients</p>
                             </div>
                   </div>
                </div>
@@ -349,11 +351,11 @@ $(document).ready(function(){
               <div class="col-lg-3 col-lg-6 counterfloat">
                 <div class=" clearfix">
                         <div class="  facts-item">
-                            <i class="fa fa-map-marker-alt"></i>
+                            <i class="fa fa-check"></i>
                           </div>
                             <div class="facts-text">
-                                <h3 class="counter">25</h3>
-                                <p>Service Points</p>
+                                <h3 class="counter">5000</h3>
+                                <p>Projects Completed</p>
                             </div>
                   </div>
                </div>
