--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@ $(document).ready(function(){
                       
                       <div class="column-card shadow">
                     <div class="header">
-                      <h3>Basic Cleaning</h3>
-                       <h2 >
+                      <h3 class = "dollarPrice">Basic Cleaning</h3>
+                       <h2 class = "dollarPrice" >
                         <span > $ </span>
-                       <strong > 25 </strong>
+                       <strong > 35 </strong>
                        <span >.99</span>
                      </h2>
                    </div>
@@ -412,7 +412,7 @@ $(document).ready(function(){
                                     <li><i class="far fa-check-circle"></i>Seats Washing</li>
                                     <li><i class="far fa-check-circle"></i>Vacuum Cleaning</li>
                                     <li><i class="far fa-check-circle"></i>Exterior Cleaning</li>
-                                    <li><i class="far fa-times-circle"></i>Interior Wet Cleaning</li>
+                                    <li><i class="far fa-check-circle"></i>Interior Wet Cleaning</li>
                                     <li><i class="far fa-times-circle"></i>Window Wiping</li>
                                 </ul>
                               </div>
@@ -430,7 +430,7 @@ $(document).ready(function(){
                       <h3>Basic Cleaning</h3>
                        <h2 >
                         <span > $ </span>
-                       <strong > 25 </strong>
+                       <strong > 45 </strong>
                        <span >.99</span>
                      </h2>
                    </div>
@@ -439,8 +439,8 @@ $(document).ready(function(){
                                     <li><i class="far fa-check-circle"></i>Seats Washing</li>
                                     <li><i class="far fa-check-circle"></i>Vacuum Cleaning</li>
                                     <li><i class="far fa-check-circle"></i>Exterior Cleaning</li>
-                                    <li><i class="far fa-times-circle"></i>Interior Wet Cleaning</li>
-                                    <li><i class="far fa-times-circle"></i>Window Wiping</li>
+                                    <li><i class="far fa-check-circle"></i>Interior Wet Cleaning</li>
+                                    <li><i class="far fa-check-circle"></i>Window Wiping</li>
                                 </ul>
                               </div>
 
