--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">123 Street, New York, USA</p>
-                                        <p class="para"><strong>Call:</strong>+012 345 6789</p>
+                                        <p class="para">19 Nicholson Street·/p>
+                                        <p class="para"><strong>Call:</strong> 0423 857 85</p>
                                     </div>
                                   </div>
 
@@ -476,8 +476,8 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">123 Street, New York, USA</p>
-                                        <p class="para"><strong>Call:</strong>+012 345 6789</p>
+                                        <p class="para">Vogue Shopping Plaza, 670 Chapel St</p>
+                                        <p class="para"><strong>Call:</strong> +61 3 9827 366</p>
                                     </div>
                                   </div>
 
@@ -485,8 +485,8 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">123 Street, New York, USA</p>
-                                        <p class="para"><strong>Call:</strong>+012 345 6789</p>
+                                        <p class="para"> 39 Victory Rd, Airport West VIC 3042, Australia</p>
+						       <p class="para"><strong>Call:</strong> +61 3 9078 74</p>
                                     </div>
                                   </div>
 
@@ -495,8 +495,8 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">123 Street, New York, USA</p>
-                                        <p class="para"><strong>Call:</strong>+012 345 6789</p>
+                                        <p class="para">440 Docklands Dr, Docklands VIC 3008, Australia</p>
+                                        <p class="para"><strong>Call:</strong> +61 433 487 50</p>
                                     </div>
                                   </div>
                                 </div>
