--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">19 Nicholson Street·/p>
+                                        <p class="para">19 Nicholson Street·</p>
                                         <p class="para"><strong>Call:</strong> 0423 857 85</p>
                                     </div>
                                   </div>
