--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ $(document).ready(function(){
                               <img src="img/team-4.jpg" alt="Team Image">
                             </div>
                             <div class="image-text">
-                              <h2>Donald John</h2>
+                              <h2>Adam Phillips</h2>
                               <p>Engineer</p>
                               <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
@@ -574,8 +574,8 @@ $(document).ready(function(){
                               <img src="img/team-2.jpg" alt="Team Image">
                             </div>
                             <div class="image-text">
-                              <h2>Donald John</h2>
-                              <p>Engineer</p>
+                              <h2>Thomas Olsen</h2>
+                              <p>Worker</p>
                               <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -593,8 +593,8 @@ $(document).ready(function(){
                               <img src="img/team-3.jpg" alt="Team Image">
                             </div>
                             <div class="image-text">
-                              <h2>Donald John</h2>
-                              <p>Engineer</p>
+                              <h2>James Alien</h2>
+                              <p>Worker</p>
                               <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -619,28 +619,28 @@ $(document).ready(function(){
                     <div class="testimonial-item">
                         <img src="img/testimonial-1.jpg" alt="Image">
                         <div class="testimonial-text">
-                            <h3>Client Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Jim V.</h3>
+                            <h4>Teacher</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor auctor gravid
+                               EXCELLENT SERVICE AT AN AWESOME PRICE....TRY IT AND YOU WILL BE BACK...GUARANTEED...
                             </p>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <img src="img/testimonial-2.jpg" alt="Image">
                         <div class="testimonial-text">
-                            <h3>Client Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Sonia P.</h3>
+                            <h4>Professor</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor auctor gravid
+                               I love this car wash! The service is awesome....they always do a great job cleaning my wheels (which I am kind of picky about)....TRY IT YOU WILL NOT REGRET IT...
                             </p>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <img src="img/testimonial-3.jpg" alt="Image">
                         <div class="testimonial-text">
-                            <h3>Client Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Fernando C</h3>
+                            <h4>AUS Navy</h4>
                             <p>
                                 Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor auctor gravid
                             </p>
@@ -652,7 +652,7 @@ $(document).ready(function(){
                             <h3>Client Name</h3>
                             <h4>Profession</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor auctor gravid
+                               I love this car wash! The service is awesome....they always do a great job cleaning my wheels (which I am kind of picky about)....TRY IT YOU WILL NOT REGRET IT...
                             </p>
                         </div>
                     </div>
