--- a/index.html
+++ b/index.html
@@ -642,17 +642,17 @@ $(document).ready(function(){
                             <h3>Fernando C</h3>
                             <h4>AUS Navy</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor auctor gravid
+                               I love this car wash! The service is awesome....they always do a great job cleaning my wheels (which I am kind of picky about)....TRY IT YOU WILL NOT REGRET IT...
                             </p>
                         </div>
                     </div>
                     <div class="testimonial-item">
                         <img src="img/testimonial-4.jpg" alt="Image">
                         <div class="testimonial-text">
-                            <h3>Client Name</h3>
-                            <h4>Profession</h4>
+                            <h3>Nevin R.</h3>
+                            <h4>Carpenter</h4>
                             <p>
-                               I love this car wash! The service is awesome....they always do a great job cleaning my wheels (which I am kind of picky about)....TRY IT YOU WILL NOT REGRET IT...
+                               I came to this car wash with my truck looking as if I had been off roading! They cleaned it very good inside out to the smallest detail!
                             </p>
                         </div>
                     </div>
