--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ $(document).ready(function(){
                             <h3>Fernando C</h3>
                             <h4>AUS Navy</h4>
                             <p>
-                               I love this car wash! The service is awesome....they always do a great job cleaning my wheels (which I am kind of picky about)....TRY IT YOU WILL NOT REGRET IT...
+                               I have been washing my car at vista palms car wash for a few months now and I’ve never had any problems. Every time I go, all the employees are very nice and car comes out even nice. I highly recommend this carwash :)
                             </p>
                         </div>
                     </div>
