--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">Vogue Shopping Plaza, 670 Chapel St</p>
+                                        <p class="para"> 670 Chapel St 7</p>
                                         <p class="para"><strong>Call:</strong> +61 3 9827 366</p>
                                     </div>
                                   </div>
@@ -485,7 +485,7 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para"> 39 Victory Rd, Airport West VIC 3042, Australia</p>
+                                        <p class="para"> 39 Victory Rd, 3042, Australia</p>
 						       <p class="para"><strong>Call:</strong> +61 3 9078 74</p>
                                     </div>
                                   </div>
@@ -495,7 +495,7 @@ $(document).ready(function(){
                       <i class="fa fa-map-marker-alt" style="float:left"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
-                                        <p class="para">440 Docklands Dr, Docklands VIC 3008, Australia</p>
+                                        <p class="para">440 Docklands Dr, Australia</p>
                                         <p class="para"><strong>Call:</strong> +61 433 487 50</p>
                                     </div>
                                   </div>
