--- a/index.html
+++ b/index.html
@@ -680,10 +680,10 @@ $(document).ready(function(){
                                 </div>
                 </div>
                 <div class="image-text">
-                  <h3><a  href="#">Lorem ipsum dolor sit amet</a>
+                  <h3><a  href="#">5 Most Awaited Car Launches In June 2022!</a>
                   </h3>
                   <p>
-                   Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                   New car launches are always an exciting affair! So far, this year had witnessed some good car launches like the Skoda Slavia and Kodiaq, the Honda City HEV, the Mercedes Maybach series, and more. Today, let’s take a look at the 5 most awaited car launches in June! 
                   </p>
                 </div>
                   <div class="image-meta clearfix">
