--- a/index.html
+++ b/index.html
@@ -707,10 +707,10 @@ $(document).ready(function(){
                                 </div>
                 </div>
                 <div class="image-text">
-                  <h3><a  href="#">Lorem ipsum dolor sit amet</a>
+                  <h3><a  href="#">10 Best Selling Car Brands</a>
                   </h3>
                   <p>
-                   Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                 May has gone by too quickly, and it is time for yet another sales report! Here are the top 10 selling brands in May 2022.
                   </p>
                 </div>
                   <div class="image-meta clearfix">
@@ -733,10 +733,10 @@ $(document).ready(function(){
                                 </div>
                 </div>
                 <div class="image-text">
-                  <h3><a  href="#">Lorem ipsum dolor sit amet</a>
+                  <h3><a  href="#">Kia EV6 Electric Crossover Launch Report</a>
                   </h3>
                   <p>
-                   Lorem ipsum dolor sit amet elit. Pellent iaculis blandit lorem, quis convall diam eleife. Nam in arcu sit amet massa ferment quis enim. Nunc  augue velit metus congue eget semper
+                  Kia has finally launched its first electric crossover in India, the EV6. It will be imported as a CBU: a completely built-up unit in India, and the company will only bring the first batch of 100 units initially available at 15 selected dealerships.
                   </p>
                 </div>
                   <div class="image-meta clearfix">
